@@ -2,6 +2,7 @@
 	"$schema": "https://json-schema.org/draft/2019-09/schema",
 	"description": "Unique company code for insurer, according to list IG B2B",
 	"maxLength": 5,
-	"pattern": "^([\\w\\D]*[\\w\\D][\\w\\D]*)$",
-	"type": "string"
+	"pattern": "^[a-zA-Z0-9]+$",
+	"type": "string",
+	"examples": ["15S"]
 }
